tests/jsr335/Semantics/LambdaExpressions/ReservedKeyword/ShouldFail/syntax01/Test.java


public class Test {
	
	
	public static void main(String[] args) {
		
    }
	
	public @interface _ {  
		String information() default "None";
	}
}